add tag favorite (#17)
