# docs/swagger.json
@@ -498,6 +498,10 @@
                 "read": {
                     "description": "Read this item has been read before.",
                     "type": "boolean"
+                },
+                "tag_favorite": {
+                    "description": "TagFavorite this item contains favorite tags",
+                    "type": "boolean"
                 }
             }
         },
@@ -573,6 +577,10 @@
                 },
                 "read": {
                     "description": "Read this item has been read before.",
+                    "type": "boolean"
+                },
+                "tag_favorite": {
+                    "description": "TagFavorite this item contains favorite tags",
                     "type": "boolean"
                 }
             }
